@@ -4,6 +4,7 @@ Date: 9999-99-99
   Changes:
   Features:
   Bugfixes:
+    - Fixed crash when player places a bluperint using blueprint book from inventory.
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.1
 Date: 2022-08-07
